Present queries as JSON objects in REST API request and response
Previously these were JSON strings containing serialized JSON objects.
Now they are first-class JSON objects.
